--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-<div style="color:white; text-align:center">
-<img src="images/weather-logo.png" style=" height: auto;width: auto;filter: drop-shadow(10px 10px 10px black);">
+<div style="color:rgb(0, 0, 0); text-align:center">
+<img src="images/weather.png" style=" height: auto;width: auto;filter: drop-shadow(10px 10px 10px black);">
     <h1>Welcome to the Weather Web App</h1>
     <h3>Made by Rajat Jadhav</h3>
  
