--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div style="color:rgb(0, 0, 0); text-align:center">
-<img src="images/weather.png" style=" height: auto;width: auto;filter: drop-shadow(10px 10px 10px black);">
+<img src="images/sun_1888282.png" style=" height: auto;width: auto;filter: drop-shadow(10px 10px 10px black);">
     <h1>Welcome to the Weather Web App</h1>
     <h3>Made by Rajat Jadhav</h3>
  
